--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+title:              "기록하는 개발자"
+email:              sgn854282@gmail.com
+description:        "게임 개발 블로그"
 author:             Start Bootstrap
 baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+url:                "https://Woong.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
-github_username:    StartBootstrap
+github_username:    "Woon98K"
 facebook_username:  StartBootstrap
 instagram_username:  
 linkedin_username:
